First working version.

--- a/Source/ui_ios/CMakeLists.txt
+++ b/Source/ui_ios/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH
 )
 include(Header)
 
-project(PlayUI)
+project(PlayUI LANGUAGES C Swift)
 
 if(NOT TARGET PlayCore)
 	add_subdirectory(
@@ -62,6 +62,7 @@ if(NOT TARGET AltKit)
 		${CMAKE_CURRENT_BINARY_DIR}/AltKit
 	)
 endif()
+list(APPEND PROJECT_LIBS AltKit)
 
 find_library(UIKIT_LIBRARY NAMES UIKit)
 find_library(COREGRAPHICS_LIBRARY NAMES CoreGraphics)
@@ -81,6 +82,7 @@ set(OSX_SOURCES
 	main.mm
 	ResolutionFactorSelectorViewController.mm
 	SettingsViewController.mm
+	SwiftSupport.swift
 	VirtualPadButton.mm
 	VirtualPadItem.mm
 	VirtualPadStick.mm
@@ -125,7 +127,7 @@ set(OSX_RES
 
 # Add our Executable
 add_executable(Play MACOSX_BUNDLE ${OSX_SOURCES} ${OSX_HEADERS} ${OSX_RES})
-set_target_properties(Play PROPERTIES COMPILE_FLAGS "-x objective-c++ -fobjc-arc")
+target_compile_options(Play PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-x objective-c++ -fobjc-arc>)
 
 # Probably a better way to set the framework link libraries.
 target_link_libraries(Play ${UIKIT_LIBRARY})
